# hauth

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  hauth.cabal  stack.yaml  swagger.yaml
app/: Main.hs
snaplets/jwt/: devel.cfg  docker.cfg
snaplets/jwt/keys/: 0.json
snaplets/persist/: devel.cfg  docker.cfg  travis.cfg
src/: Application.hs  Helpers.hs  Schema.hs  Site.hs  Types.hs
src/Handlers/: Account.hs  Domain.hs  Token.hs  User.hs
src/Helpers/: Crypto.hs  DB.hs  Params.hs  Responses.hs
src/Models/: Account.hs  Domain.hs  Page.hs  Token.hs  User.hs
static/: swagger.yaml
test/: Spec.hs
test/Handlers/: AccountSpec.hs  DomainSpec.hs  TokenSpec.hs  UserSpec.hs
